--- a/source/partials/header.htm
+++ b/source/partials/header.htm
@@ -9,10 +9,13 @@
   <meta name="description" content="Bingo One page parallax responsive HTML Template ">
   
   <meta name="author" content="Themefisher.com">
+     
+  <!-- theme meta -->
+  <meta name="theme-name" content="bitbank" />
 
   <title>Bit-Bank</title>
 
-<!-- Mobile Specific Meta
+  <!-- Mobile Specific Meta
   ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
